# pr-tracker

./: .gitignore  .releaserc.yaml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  \  api.nix  attrsToURLParams.nix  filterOptions-check.nix  filterOptions.nix  flake.nix  flattenTree.nix  packages.nix  treefmt.nix
.github/workflows/: check.yml  docs.yml  generate-app-token.yml  release.yml  update-flake-lock.yml
by-name/: flake.nix
crates/: DATABASE_URL.md
crates/api/: Cargo.toml  test-util.rs
crates/api-config/: Cargo.toml  PORT.md  TRACING_FILTER.md
crates/api-config/src/: lib.rs
crates/api/src/: config.rs  lib.rs  main.rs
crates/api/tests/: healthcheck.rs  landings.rs  openapi.rs  sd-notify.rs  test.rs  v1.rs
crates/db-context/: Cargo.toml
crates/db-context/src/: lib.rs
crates/fetcher/: Cargo.toml  build.rs
crates/fetcher-config/: BRANCH_PATTERNS.md  Cargo.toml  GITHUB_REPO_NAME.md  GITHUB_REPO_OWNER.md  GITHUB_TOKEN.md
crates/fetcher-config/src/: lib.rs
crates/fetcher/src/: config.rs  github.rs  lib.rs  main.rs  repo.rs  test.rs
crates/fetcher/src/graphql/: pulls.graphql
crates/fetcher/tests/: test.rs
crates/fragile-child/: Cargo.toml
crates/fragile-child/src/: lib.rs
crates/pr-tracker-api/: Cargo.toml  test-util.rs
crates/pr-tracker-api/src/: lib.rs
crates/pr-tracker-api/tests/: test.rs
crates/pr-tracker-store/.sqlx/: query-4e986392cf064f79c7c53bee66ad8003989141289cff972e995da41d871667b9.json  query-ef19d6f7b405ffb84ae9903f1b1aef96be748c3b9036bf7a7509722722a7c08a.json
crates/store/: Cargo.toml
crates/store/.sqlx/: query-4f887194427b0b1bc87d0d875c109a2fd156026b3002585fe6384fc714eda43d.json  query-7de00279cf2a65897081583a39bf86e3684664c7a0bbb15716cd1101ab1531d8.json  query-bbbddbfd780b871d10b4f267c6ffc37b92af5b1fe89bad6e7c38bd2a74b57d9a.json  query-bcafdf1df11188dfb7c251989a469f7ad24800280996a0cad4caf5f57b88f5dc.json  query-ed4110e3dba9144b7c67d22b2189e9a13daaa2110552d90fed3c546f02e3e361.json
crates/store/src/: lib.rs  util.rs
crates/util/: Cargo.toml  build.rs
crates/util/migrations/: 20231129080318_initial.sql  20240109081503_prevent_duplicate_landings.sql
crates/util/src/: lib.rs
modules/: api.nix  clippy.nix  common.nix  crate-utils.nix  db-context.nix  db.nix  dev-shell.nix  fetcher.nix  filter-options.nix  formatting.nix  git-hooks.nix  introduction.nix  manual.nix  nci.nix  nixos-manual.nix  nixos-modules-lib.nix  prior-art.nix  program-docs.nix  store.nix  util.nix  vision.nix
modules/api/: default.nix  nixos-module.nix  package.nix
modules/fetcher/: default.nix  nixos-module.nix  package.nix
modules/flake/: api.nix  checks.nix  fetcher.nix  filterOptions-check.nix  formatting.nix  nixos-common.nix  packages.nix
modules/flake/release/: default.nix
modules/flake/release/semantic-release-with-plugins/: package-lock.json
modules/integration-tests/: create-locally.nix  default.nix
modules/integration-tests/api/: default-package.nix  default.nix  tcp-db.nix
modules/integration-tests/fetcher/: default-package.nix  default.nix  tcp-db.nix
modules/nixos/: api.nix  common.nix  fetcher.nix
modules/nixos-manual/: default.nix
modules/private-nixos-modules/: db.nix  default.nix
modules/release/: default.nix
nixos-tests/: api.nix
nixos-tests/api/: create-db-locally.nix  default-package.nix  package.nix  socket-db.nix  tcp-db.nix
nixos-tests/create-locally/: package.nix
nixos-tests/fetcher/: default-package.nix  package.nix  socket-db.nix  tcp-db.nix
nixos-tests/unified/: create-db-locally.nix  package.nix
pr-tracker-api/src/: lib.rs  main.rs
pr-tracker-api/tests/: test.rs
pr-tracker-store/.sqlx/: query-48afdf0901e6c0e8b7b25fde59660b5f919849b1a947070d16753408fddc4fb3.json  query-4c582b0b1209f53c2c8c941783bd6b2aed1f5b08efc64437210ca616c49df8a5.json  query-a63bd0e24d2aa55e27c34f164c474b75fc8a58ff79caa1484e4b98537c47670a.json  query-cdb7a3efa1476026ca0cb5d5c136a7b41dfe863f7a3ecc226d0a53f1f9d961c1.json  query-d0834c96a348ae04650d0ddf8fa71b076413cd144d6bace2744d6fd37827dfeb.json  query-df1172cfd4f9806c5c60fc4dab2b5ced77a851c78f543a0e3a77c1e285bc58d2.json  query-f4f52214cd00ed540a39d0622a5c73971de905ba87b120684210ceda649ea10e.json
release/: default.nix
release/semantic-release-with-plugins/: package.json
util/src/: lib.rs
