[profile.release]
debug = true
split-debuginfo = "off"
strip = "none"

[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.dependencies]
anyhow = {features = ["backtrace"], version = "*"}
camino = {features = ["serde1"], version = "*"}
confique = {default-features = false, version = "*"}
derive_more = {features = ["deref", "from"], version = "1.0.0-beta.6"}
futures = "*"
getset = "*"
gix = {features = ["revision"], version = "*"}
serde = "*"
tempfile = "*"
thiserror = "*"
db-context.path = "crates/db-context"
fragile-child.path = "crates/fragile-child"
pr-tracker-store.path = "crates/store"
util.path = "crates/util"

[workspace.package]
authors = ["Molybdenum Software"]
edition = "2021"
license = "AGPL-3.0-only"
repository = "https://github.com/molybdenumsoftware/pr-tracker"
version = "5.0.0"
