[profile.release]
debug = true
split-debuginfo = "off"
strip = "none"

[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.dependencies]
anyhow = {features = ["backtrace"], version = "*"}
camino = {features = ["serde1"], version = "*"}
confique = {default-features = false, version = "*"}
derive_more = {features = ["deref", "from"], version = "*"}
getset = "*"
gix = {features = ["revision"], version = "*"}
serde = "*"
serde_with = "*"
tempfile = "*"
thiserror = "*"
tracing-subscriber = {features = ["env-filter"], version = "*"}
db-context.path = "crates/db-context"
fragile-child.path = "crates/fragile-child"
pr-tracker-store.path = "crates/store"
util.path = "crates/util"

[workspace.package]
authors = ["Molybdenum Software"]
edition = "2024"
license = "MIT"
repository = "https://github.com/molybdenumsoftware/pr-tracker"
version = "7.3.0"
