[dependencies]
pr-tracker-api-config = {path = "../api-config"}
camino = "*"
poem = {version = "*", features = ["test"]}
sqlx = {version = "*", default-features = false, features = ["macros", "migrate"]}
tokio = "*"
anyhow.workspace = true
confique.workspace = true
futures.workspace = true
pr-tracker-store.workspace = true
serde.workspace = true
thiserror.workspace = true
util.workspace = true

[dev-dependencies]
db-context.workspace = true
fragile-child.workspace = true
getset.workspace = true
tempfile.workspace = true

[package]
name = "pr-tracker-api"
publish = false
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[target.'cfg(target_family = "unix")'.dependencies]
sd-notify = "*"
