[dependencies]
camino = "*"
poem = {features = ["test"], version = "*"}
poem-openapi = {features = ["swagger-ui"], version = "*"}
pr-tracker-api-config = {path = "../api-config"}
sqlx = {default-features = false, features = ["macros", "migrate"], version = "*"}
tokio = "*"
anyhow.workspace = true
confique.workspace = true
pr-tracker-store.workspace = true
serde.workspace = true
thiserror.workspace = true
tracing-subscriber.workspace = true
util.workspace = true

[dev-dependencies]
db-context.workspace = true
fragile-child.workspace = true
getset.workspace = true
tempfile.workspace = true

[package]
name = "pr-tracker-api"
publish = false
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[target.'cfg(target_family = "unix")'.dependencies]
sd-notify = "*"
