[dependencies]
camino = "*"
futures = "*"
sqlx = {version = "*", features = ["postgres", "runtime-tokio"]}
tempfile = "*"
fragile-child.workspace = true
gix.workspace = true

[package]
name = "db-context"
publish = false
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true
