[dependencies]
chrono = {version = "*", features = ["serde"]}
pr-tracker-fetcher-config = {path = "../fetcher-config"}
futures = "*"
graphql_client = {version = "*", features = ["reqwest-rustls", "graphql_query_derive"], default-features = false}
itertools = "*"
log = "*"
env_logger = "*"
reqwest = {version = "*", default-features = false, features = ["rustls"]}
tokio = {version = "*", features = ["process", "macros", "rt", "rt-multi-thread"]}
wildmatch = {version = "*", features = ["serde"]}
sqlx-core = "*"
serde_json = "*"
anyhow.workspace = true
camino.workspace = true
confique.workspace = true
derive_more.workspace = true
gix.workspace = true
pr-tracker-store.workspace = true
serde.workspace = true
util.workspace = true

[dev-dependencies]
once_cell = "*"
db-context.workspace = true
tempfile.workspace = true

[package]
name = "pr-tracker-fetcher"
publish = false
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true
