[dependencies]
chrono = {features = ["serde"], version = "*"}
env_logger = "*"
futures = "*"
graphql_client = {default-features = false, features = ["graphql_query_derive", "reqwest-rustls"], version = "*"}
itertools = "*"
log = "*"
pr-tracker-fetcher-config = {path = "../fetcher-config"}
reqwest = {default-features = false, features = ["rustls"], version = "*"}
serde_json = "*"
sqlx-core = "*"
tokio = {features = ["macros", "process", "rt", "rt-multi-thread"], version = "*"}
wildmatch = {features = ["serde"], version = "*"}
anyhow.workspace = true
camino.workspace = true
confique.workspace = true
derive_more.workspace = true
gix.workspace = true
pr-tracker-store.workspace = true
serde.workspace = true
util.workspace = true

[dev-dependencies]
once_cell = "*"
db-context.workspace = true
tempfile.workspace = true

[features]
impure_tests = []

[package]
name = "pr-tracker-fetcher"
publish = false
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true
