[dependencies]
chrono = {features = ["serde"], version = "*"}
env_logger = "*"
graphql_client = {default-features = false, features = ["graphql_query_derive", "reqwest-rustls"], version = "*"}
itertools = "*"
log = "*"
# Pinned for compatibility with graphql-client.
# We can unpin once this is released: <https://github.com/graphql-rust/graphql-client/commit/683951f335b22317ab18dd170809ad57838ffe9d>
reqwest = {default-features = false, features = ["rustls-tls"], version = "^0.11"}
serde_json = "*"
sqlx-core = "*"
tokio = {features = ["macros", "process", "rt", "rt-multi-thread"], version = "*"}
wildmatch = {features = ["serde"], version = "*"}
anyhow.workspace = true
camino.workspace = true
confique.workspace = true
derive_more.workspace = true
gix.workspace = true
pr-tracker-store.workspace = true
serde.workspace = true
util.workspace = true

[dev-dependencies]
once_cell = "*"
db-context.workspace = true
tempfile.workspace = true

[features]
impure_tests = []

[package]
name = "pr-tracker-fetcher"
publish = false
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true
