[package]
name = "pr-tracker-api"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
camino = "1.1.6"
rocket = { version = "0.5.0", features = ["json"] }
rocket_db_pools = { version = "0.1.0", features = ["sqlx_postgres"] }
sqlx = { version = "0.7", default-features = false, features = ["macros", "migrate"] }
pr-tracker-store = { version = "0.1.0", path = "../pr-tracker-store" }
util = { version = "0.1.0", path = "../util" }

[dev-dependencies]
tempfile = "3.8.1"
tokio = "1.34.0"
