[dependencies]
derive_more = {workspace = true, features = ["display"]}
sqlx = {version = "*", features = ["postgres", "runtime-tokio"]}
futures.workspace = true
getset.workspace = true
thiserror.workspace = true

[package]
name = "pr-tracker-store"
publish = false
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true
