[dependencies]
derive_more = {features = ["display"], workspace = true}
sqlx = {features = ["postgres", "runtime-tokio"], version = "*"}
futures.workspace = true
getset.workspace = true
thiserror.workspace = true

[package]
name = "pr-tracker-store"
publish = false
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true
