[dependencies]
derive_more = {features = ["display"], workspace = true}
sqlx = {features = ["postgres", "runtime-tokio"], version = "*"}
getset.workspace = true
thiserror.workspace = true

[package]
name = "pr-tracker-store"
publish = false
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true
