[dependencies]
futures = "*"
sqlx = {version = "*", features = ["postgres", "runtime-tokio"]}
tokio = {version = "*", features = ["process", "macros", "rt", "rt-multi-thread"]}
db-context.workspace = true

[package]
name = "util"
publish = false
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true
