[dependencies]
clap = {features = ["derive"], version = "*"}
sqlx = {features = ["postgres", "runtime-tokio"], version = "*"}
tokio = {features = ["macros", "process", "rt", "rt-multi-thread"], version = "*"}
db-context.workspace = true

[package]
name = "util"
publish = false
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true
